[gd_scene load_steps=9 format=3 uid="uid://c3kn0jiqoe5fm"]

[ext_resource type="Script" uid="uid://fn2607eaa17" path="res://gui/control_bar.gd" id="1_bjxsy"]
[ext_resource type="Texture2D" uid="uid://cmcv8bhmmjv" path="res://resources/icons/white/restart.png" id="2_tgswo"]
[ext_resource type="Script" uid="uid://dacwotscya1ub" path="res://gui/icon_button.gd" id="3_8fam1"]
[ext_resource type="Texture2D" uid="uid://blyuxdonhje62" path="res://resources/icons/white/stop.png" id="4_bs54y"]
[ext_resource type="Texture2D" uid="uid://b50sv6fav5owi" path="res://resources/icons/white/run.png" id="5_4wq8j"]
[ext_resource type="Texture2D" uid="uid://d2qqq8u8a1pho" path="res://resources/icons/white/loop.png" id="6_6btlt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7v4cc"]
bg_color = Color(0.10862, 0.111979, 0.110691, 1)
border_width_left = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q16gx"]
bg_color = Color(0.171875, 0.171875, 0.171875, 1)

[node name="ControlBar" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.0
offset_right = 230.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7v4cc")
script = ExtResource("1_bjxsy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResetButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Reset"
texture_normal = ExtResource("2_tgswo")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_8fam1")

[node name="StopButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Stop"
toggle_mode = true
texture_normal = ExtResource("4_bs54y")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_8fam1")

[node name="RunButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Run"
toggle_mode = true
texture_normal = ExtResource("5_4wq8j")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_8fam1")

[node name="LoopButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Loop"
toggle_mode = true
texture_normal = ExtResource("6_6btlt")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_8fam1")

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time"
horizontal_alignment = 2

[node name="Time" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_q16gx")
text = "0
"
horizontal_alignment = 2

[node name="EndTimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "End"

[node name="EndTimeField" type="LineEdit" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "10"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RunButton" to="." method="_on_run_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LoopButton" to="." method="_on_loop_button_pressed"]
[connection signal="text_submitted" from="MarginContainer/HBoxContainer/EndTimeField" to="." method="_on_end_time_field_text_submitted"]
